[package]
name             = "omni-sumchain"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
rust-version.workspace = true

[features]
# Stage 9a + 9c: default-OFF. The submit path pulls the public chain
# primitives (`sumchain-primitives` + `sumchain-crypto` v0.1.0,
# crates.io, dual-licensed MIT OR Apache-2.0, byte-equivalent to the
# previously-vendored chain rev d83e45a4 for the InferenceAttestation
# surface). Default builds (read-only operator surface) do not need
# them and resolve without ever touching the chain crates. Submit
# operators opt in with `--features submit`; no GitHub credential is
# required at any step (the chain crates are public on crates.io).
default = []
submit  = ["dep:sumchain-primitives", "dep:sumchain-crypto"]

[dependencies]
omni-types          = { workspace = true }
omni-zkml           = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
thiserror           = { workspace = true }
tracing             = { workspace = true }
ureq                = { workspace = true }
# Public chain primitives from crates.io (v0.1.0, MIT OR Apache-2.0).
# Optional, only pulled in by `--features submit`; default builds do
# not touch them.
sumchain-primitives = { workspace = true, optional = true }
sumchain-crypto     = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
# Stage 7b / 9c — used by tests/parity_vendored_primitives.rs only,
# to bincode-1.3-encode the public chain types (sumchain-primitives
# v0.1.0) and compare against Stage 6's public canonical-bytes
# function. Itself optional in spirit (the parity test is
# `--features submit`-gated), but kept here so `cargo test
# --features submit` resolves without further flags.
bincode1 = { package = "bincode", version = "1.3" }
