[package]
name             = "omni-sumchain"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
rust-version.workspace = true

[features]
# Stage 9a + 9c: default-OFF. The submit path pulls the public chain
# primitives (`sumchain-primitives` + `sumchain-crypto` v0.2.0,
# crates.io, dual-licensed MIT OR Apache-2.0) covering the
# InferenceAttestation surface. Default builds (read-only operator
# surface) do not need
# them and resolve without ever touching the chain crates. Submit
# operators opt in with `--features submit`; no GitHub credential is
# required at any step (the chain crates are public on crates.io).
default = []
submit  = ["dep:sumchain-primitives", "dep:sumchain-crypto"]
# Issue #83 — settlement track read surface. Dependency-neutral:
# activates no new external crates, only compiles a new local module
# (`crate::settlement`) with raw JSON-RPC DTOs and adapter extension
# methods on `SumChainClient<T>` for the InferenceSettlement RPCs
# introduced by sum-chain#76 / #86. Default builds resolve to the
# exact same dependency tree with or without this feature.
settlement-read = []
# Issue #87 — settlement claim WRITE path. Superset of
# `settlement-read` (needs the settlement read RPCs for prechecks) and
# `submit` (needs sumchain-primitives + sumchain-crypto for
# `TransactionV2` decode + `SignedTransaction::to_hex()` + the
# existing sum_sendRawTransaction transport already used by the
# attestation submit flow). Adds no new crates on top of `submit`.
settlement-submit = ["settlement-read", "submit"]
# Issue #81 — settlement dispute open + resolve WRITE path.
# Superset of `settlement-submit`; reuses the same tx-signing +
# submit infrastructure plus the settlement read prechecks
# (session/attestation/disputes reads for funder + maturity +
# duplicate-dispute local gates). Adds no new crates on top of
# `settlement-submit`.
settlement-dispute = ["settlement-read", "settlement-submit"]

[dependencies]
omni-types          = { workspace = true }
omni-zkml           = { workspace = true }
serde               = { workspace = true }
# Issue #97: `arbitrary_precision` makes `serde_json` preserve the exact
# integer token of a JSON number through the intermediate `Value` stage
# instead of coercing anything above `u64::MAX` to `f64`. The chain's
# `chain_getChainParams.min_fee` is a `Balance` (= `u128`); the
# production transport parses the raw HTTP body into a `serde_json::Value`
# *before* the typed `ChainParamsInfo` (u128) deserialize, so without
# this feature a `min_fee > u64::MAX` would already be lossy at `Value`.
# Integers round-trip byte-for-byte identically; only the internal number
# representation changes.
serde_json          = { workspace = true, features = ["arbitrary_precision"] }
thiserror           = { workspace = true }
tracing             = { workspace = true }
ureq                = { workspace = true }
# Public chain primitives from crates.io (v0.2.0, MIT OR Apache-2.0).
# Optional, only pulled in by `--features submit`; default builds do
# not touch them.
sumchain-primitives = { workspace = true, optional = true }
sumchain-crypto     = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
# Stage 7b / 9c — used by tests/parity_vendored_primitives.rs only,
# to bincode-1.3-encode the public chain types (sumchain-primitives
# v0.2.0) and compare against Stage 6's public canonical-bytes
# function. Itself optional in spirit (the parity test is
# `--features submit`-gated), but kept here so `cargo test
# --features submit` resolves without further flags.
bincode1 = { package = "bincode", version = "1.3" }
