[package]
name             = "omni-zkml"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
omni-types      = { workspace = true }
omni-store      = { workspace = true }
blake3          = { workspace = true }
bincode         = { workspace = true }
bs58            = { workspace = true }
libp2p-identity = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
chrono          = { workspace = true }
thiserror       = { workspace = true }
tracing         = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
