[package]
name             = "omni-zkml"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
omni-types      = { workspace = true }
omni-store      = { workspace = true }
blake3          = { workspace = true }
bincode         = { workspace = true }
# Stage 6 — chain-wire canonical bytes use bincode 1.3 to match the chain
# team's reference implementation. Scoped crate-local under a renamed
# `bincode1` import so the workspace bincode 2.0-rc.3 (used by Stages
# 1/4/5 and by omni-store/omni-net) stays untouched.
bincode1        = { package = "bincode", version = "1.3" }
bs58            = { workspace = true }
libp2p-identity = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
chrono          = { workspace = true }
thiserror       = { workspace = true }
tracing         = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
