[package]
name = "rumus_export"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false
# Standalone — NOT a workspace member. Lives outside the OmniNode
# workspace so the operator binary's build graph cannot reach `rumus`.

[[bin]]
name = "rumus_export"
path = "src/main.rs"

[dependencies]
rumus      = "0.4.0"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
blake3     = "1"
clap       = { version = "4", features = ["derive"] }
